# Agentic-DevOps

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh  stop.sh
.github/workflows/: ci.yml
apps/api-gateway/: README.md  pyproject.toml
apps/api-gateway/api_gateway/: dependencies.py  error.py  main.py  queue.py
apps/api-gateway/api_gateway/routers/: analysis_runs.py  audit_events.py  change_units.py  findings.py  publication_requests.py  report.py  repositories.py  review.py  score.py  settings.py  trigger_events.py  webhook.py  webhook_gitlab.py
apps/api-gateway/api_gateway/routers/code_map/: diff.py  line_context.py  prompt.py  regen.py  router.py  schema.py  store.py
apps/api-gateway/api_gateway/schemas/: models.py
apps/api-gateway/tests/: test_api.py  test_health.py  test_repositories.py  test_webhook.py
apps/api-gateway/tests/code_map/: test_diff.py  test_line_context.py  test_prompt.py  test_regen.py  test_router.py  test_schema.py  test_store.py
apps/orchestrator/: README.md
apps/report-service/: README.md
apps/web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/tests/: test_tasks.py
apps/worker/worker/: main.py  tasks.py
migrations/postgres/: 001_initial_schema.sql  002_add_clone_url.sql  002_add_repository_token.sql  003_add_run_repo_fullname.sql  004_create_settings.sql  005_add_llm_settings.sql  006_add_llm_base_url.sql  007_audit_events_workflow_id_nullable.sql  008_team_ops_foundation.sql  009_team_ops_mirror.sql  010_team_ops_derived.sql  011_team_ops_suggestion.sql  012_pm_sync_cursor.sql  013_team_ops_knowledge.sql
scripts/: migrate.py  pull.sh  shadow_pilot.py
scripts/git-hooks/: post-merge
services/audit-service/: README.md
services/change-intelligence/: README.md
services/finding-aggregator/: README.md
services/git-ingestion/: README.md
services/pm-integration/: README.md  pyproject.toml
services/pm-integration/devmanager_pm_integration/: __init__.py  __main__.py  audit.py  client.py  config.py  mapper.py  suggestion_schema.py  webhook.py
services/pm-integration/devmanager_pm_integration/jobs/: __init__.py
services/pm-integration/devmanager_pm_integration/models/: __init__.py  dto.py
services/pm-integration/devmanager_pm_integration/recompute/: __init__.py  capacity.py  familiarity.py  workload.py
services/pm-integration/devmanager_pm_integration/sync/: __init__.py  full.py  incremental.py  upsert.py
services/pm-integration/tests/: conftest.py  test_client.py  test_config.py  test_dto.py  test_mapper.py  test_recompute.py  test_suggestion_schema.py  test_sync.py
services/scoring-engine/: README.md
(+30 files in other folders)
