[project]
name = "devmanager-api-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "devmanager-domain",
    "devmanager-db",
    "devmanager-git",
    "devmanager-agents",
    "devmanager-scoring",
    "devmanager-reporting",
    "arq>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv.sources]
devmanager-domain = { workspace = true }
devmanager-db = { workspace = true }
devmanager-git = { workspace = true }
devmanager-agents = { workspace = true }
devmanager-scoring = { workspace = true }
devmanager-reporting = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api_gateway"]
