[project]
name = "devmanager-pm-integration"
version = "0.1.0"
license = "MIT"
description = "DevManager-Agent — 自研需求平台 (PM) integration service"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "devmanager-db",
    "devmanager-domain",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv.sources]
devmanager-db = { workspace = true }
devmanager-domain = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devmanager_pm_integration"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
